Removed test app from solution Initial logging Initial console app

--- a/FigLeaf.Console/FigLeaf.Console.csproj
+++ b/FigLeaf.Console/FigLeaf.Console.csproj
@@ -41,8 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FigLeaf.Core\FigLeaf.Core.csproj">
+      <Project>{07718e8e-3120-4c83-8e27-50e31dd45ab2}</Project>
+      <Name>FigLeaf.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\FigLeaf.UI\App.config">
+      <Link>App.config</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
