Multilingual support - initial logic

--- a/FigLeaf.UI/App.config
+++ b/FigLeaf.UI/App.config
@@ -12,5 +12,7 @@
     <add key="ThumbnailSize" value="128"/>
 
     <add key="DetailedLogging" value="false"/>
+
+    <add key="Culture" value="en-US"/>
   </appSettings>
 </configuration>
