--- a/FigLeaf.UI/FigLeaf.UI.csproj
+++ b/FigLeaf.UI/FigLeaf.UI.csproj
@@ -131,6 +131,13 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\Leaf80.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\en.png" />
+    <Resource Include="Img\ru.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
