--- a/FigLeaf.UI/App.config
+++ b/FigLeaf.UI/App.config
@@ -1,8 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="dirs" type="System.Configuration.NameValueFileSectionHandler" />
+  </configSections>
+      
+  <dirs>
+    <add key="d:\Patrick\FigLeaf\trunk\!_test\source" value="d:\Patrick\FigLeaf\trunk\!_test\target"/>
+  </dirs>
+
   <appSettings>
-    <add key="SourceDir" value="d:\Patrick\FigLeaf\trunk\!_test\source"/>
-    <add key="TargetDir" value="d:\Patrick\FigLeaf\trunk\!_test\target"/>
+    <add key="HasMultipleDirs" value="false"/>
     <add key="ExcludeFigLeafDir" value="true"/>
 
     <add key="MasterPassword" value="test"/>
@@ -13,6 +20,6 @@
 
     <add key="DetailedLogging" value="false"/>
 
-    <add key="Culture" value="en-US"/>
+    <add key="Culture" value="ru-RU"/>
   </appSettings>
 </configuration>
