--- a/FigLeaf.Core/FigLeaf.Core.csproj
+++ b/FigLeaf.Core/FigLeaf.Core.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>Resources.ru-RU.resx</DependentUpon>
     </Compile>
     <Compile Include="Thumbnail.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="Zip.cs" />
   </ItemGroup>
   <ItemGroup>
