--- a/FigLeaf.UI/FigLeaf.UI.csproj
+++ b/FigLeaf.UI/FigLeaf.UI.csproj
@@ -76,6 +76,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="QuestionTip.xaml.cs">
+      <DependentUpon>QuestionTip.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OppositeBooleanValueConverter.cs" />
@@ -130,6 +133,10 @@
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="QuestionTip.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
