Custom password rules: core logic + unit tests

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\FigLeaf.Core.UnitTest\packages.config" />
   <repository path="..\FigLeaf.Core\packages.config" />
   <repository path="..\FigLeaf.UI\packages.config" />
 </repositories>
