--- a/FigLeaf.Core.UnitTest/FigLeaf.Core.UnitTest.csproj
+++ b/FigLeaf.Core.UnitTest/FigLeaf.Core.UnitTest.csproj
@@ -48,7 +48,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="PasswordRules\ParserTests.cs" />
+    <Compile Include="PasswordRules\PasswordGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
