--- a/FigLeaf.UI/packages.config
+++ b/FigLeaf.UI/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.2.1" targetFramework="net40" />
   <package id="NReco.VideoConverter" version="1.0.2.0" targetFramework="net40" />
+  <package id="Ookii.Dialogs" version="1.0" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
